nav to prevent to apply for other wrap

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -1205,7 +1205,7 @@ img.help_tip {
 }
 
 .axiscomposer {
-	.axis-nav-tab-wrapper {
+	nav.axis-nav-tab-wrapper {
 		margin: 1.5em 0 1em !important;
 		border-bottom: 1px solid #ccc;
 	}
